# game.libretro.fceu-next

./: .travis.yml  00_rename_file.patch  CMakeLists.txt  README.md  appveyor.yml
depends/common/fceu-next/: 01_fix_link_error_on_osx.patch  02_fix_linker_option_error_on_osx.patch  CMakeLists.txt  fceu-next.txt
depends/common/fceumm/: CMakeLists.txt  fceumm.txt
game.libretro.fceu-next/: addon.xml
game.libretro.fceumm/: addon.xml  addon.xml.in
game.libretro.fceumm/resources/: settings.xml
game.libretro.fceumm/resources/language/English/: strings.po
gameclient.fceu-next/: addon.xml
